# engine-libraries

./: CMakeLists.txt  README.md
assimp/: CMakeLists.txt
assimp/code/: CMakeLists.txt
assimp/code/AssetLib/Collada/: ColladaHelper.cpp  ColladaHelper.h  ColladaLoader.cpp  ColladaLoader.h  ColladaParser.cpp  ColladaParser.h
assimp/code/AssetLib/FBX/: FBXAnimation.cpp  FBXBinaryTokenizer.cpp  FBXConverter.cpp  FBXConverter.h  FBXDeformer.cpp  FBXDocument.cpp  FBXDocument.h  FBXDocumentUtil.cpp  FBXDocumentUtil.h  FBXImportSettings.h  FBXImporter.cpp  FBXImporter.h  FBXMaterial.cpp  FBXMeshGeometry.cpp  FBXMeshGeometry.h  FBXModel.cpp  FBXNodeAttribute.cpp  FBXParser.cpp  FBXParser.h  FBXProperties.cpp  FBXProperties.h  FBXTokenizer.cpp  FBXTokenizer.h  FBXUtil.cpp  FBXUtil.h
assimp/code/AssetLib/glTF/: glTFAsset.inl  glTFImporter.cpp
assimp/code/AssetLib/glTF2/: glTF2Asset.inl
assimp/code/CApi/: CInterfaceIOWrapper.h
assimp/code/Common/: Assimp.cpp  Base64.cpp  BaseImporter.cpp  BaseProcess.cpp  BaseProcess.h  Compression.cpp  CreateAnimMesh.cpp  DefaultIOStream.cpp  DefaultIOSystem.cpp  FileSystemFilter.h  Importer.cpp  Importer.h  ImporterRegistry.cpp  Maybe.h  PolyTools.h  PostStepRegistry.cpp  RemoveComments.cpp  SceneCombiner.cpp  ScenePreprocessor.cpp  ScenePreprocessor.h  ScenePrivate.h  SpatialSort.cpp  Subdivision.cpp  TargetAnimation.cpp  Version.cpp  VertexTriangleAdjacency.cpp  VertexTriangleAdjacency.h  ZipArchiveIOSystem.cpp  material.cpp  simd.h
assimp/code/Material/: MaterialSystem.cpp
assimp/code/PostProcessing/: ArmaturePopulate.cpp  ArmaturePopulate.h  CalcTangentsProcess.cpp  CalcTangentsProcess.h  ComputeUVMappingProcess.cpp  ComputeUVMappingProcess.h  ConvertToLHProcess.cpp  DeboneProcess.cpp  DropFaceNormalsProcess.cpp  DropFaceNormalsProcess.h  EmbedTexturesProcess.cpp  EmbedTexturesProcess.h  FindDegenerates.cpp  FindDegenerates.h  FindInstancesProcess.cpp  FindInstancesProcess.h  FindInvalidDataProcess.cpp  FindInvalidDataProcess.h  FixNormalsStep.cpp  FixNormalsStep.h  GenBoundingBoxesProcess.cpp  GenBoundingBoxesProcess.h  GenFaceNormalsProcess.cpp  GenFaceNormalsProcess.h  GenVertexNormalsProcess.cpp  GenVertexNormalsProcess.h  JoinVerticesProcess.cpp  LimitBoneWeightsProcess.cpp  LimitBoneWeightsProcess.h  MakeVerboseFormat.cpp  OptimizeGraph.cpp  OptimizeMeshes.cpp  PretransformVertices.cpp  PretransformVertices.h  ProcessHelper.cpp  ProcessHelper.h  RemoveRedundantMaterials.cpp  RemoveRedundantMaterials.h  RemoveVCProcess.cpp  RemoveVCProcess.h  (+8 more)
assimp/contrib/unzip/: crypt.c  unzip.c
assimp/contrib/zlib/: zconf.h.in  zconf.h.included
assimp/include/assimp/: AssertHandler.h  Base64.hpp  BaseImporter.h  Bitmap.h  ByteSwapper.h  CreateAnimMesh.h  DefaultIOStream.h  DefaultIOSystem.h  GenericProperty.h  Hash.h  IOStream.hpp  IOSystem.hpp  Importer.hpp  MemoryIOWrapper.h  RemoveComments.h  SGSpatialSort.h  SceneCombiner.h  SkeletonMeshBuilder.h  SmoothingGroups.h  SpatialSort.h  StandardShapes.h  StreamReader.h  StringComparison.h  StringUtils.h  Subdivision.h  Vertex.h  XmlParser.h  aabb.h  anim.h  cfileio.h  cimport.h  color4.h  color4.inl  config.h.in  defs.h  fast_atof.h  importerdesc.h  material.h  material.inl  matrix3x3.h  (+6 more)
bullet3/: CMakeLists.txt
bullet3/Extras/: CMakeLists.txt
bullet3/examples/: CMakeLists.txt
bullet3/examples/BasicDemo/: BasicExample.cpp
bullet3/examples/Collision/: CollisionTutorialBullet2.cpp
bullet3/examples/CommonInterfaces/: CommonMultiBodyBase.h  CommonRigidBodyBase.h
bullet3/examples/Constraints/: ConstraintPhysicsSetup.cpp  TestHingeTorque.cpp
bullet3/examples/ExampleBrowser/: CMakeLists.txt  ExampleEntries.cpp  OpenGLExampleBrowser.cpp  OpenGLGuiHelper.cpp  premake4.lua
bullet3/examples/ExtendedTutorials/: Bridge.cpp  Chain.cpp  CompoundBoxes.cpp  InclinedPlane.cpp  MultipleBoxes.cpp  SimpleBox.cpp  SimpleCloth.cpp  SimpleJoint.cpp
bullet3/examples/ForkLift/: ForkLiftDemo.cpp
bullet3/examples/GyroscopicDemo/: GyroscopicSetup.cpp
bullet3/examples/Heightfield/: HeightfieldExample.cpp
bullet3/examples/HelloWorld/: CMakeLists.txt
bullet3/examples/InverseDynamics/: InverseDynamicsExample.cpp
bullet3/examples/MultiBody/: KinematicMultiBodyExample.cpp  MultiBodyConstraintFeedback.cpp  MultiBodySoftContact.cpp  TestJointTorqueSetup.cpp
bullet3/examples/MultiThreadedDemo/: CommonRigidBodyMTBase.cpp  CommonRigidBodyMTBase.h
bullet3/examples/MultiThreading/: MultiThreadingExample.cpp
bullet3/examples/OpenGLWindow/: GLInstancingRenderer.cpp  SimpleOpenGL3App.cpp
bullet3/examples/Raycast/: RaytestDemo.cpp
bullet3/examples/RigidBody/: KinematicRigidBodyExample.cpp  RigidBodySoftContact.cpp
bullet3/examples/SharedMemory/: CMakeLists.txt  PhysicsClientExample.cpp  PhysicsServerCommandProcessor.cpp  PhysicsServerExample.cpp  SharedMemoryPublic.h  premake4.lua
bullet3/examples/SharedMemory/plugins/tinyRendererPlugin/: TinyRendererVisualShapeConverter.cpp
bullet3/examples/TinyRenderer/: tgaimage.cpp
bullet3/examples/Tutorial/: Tutorial.cpp
bullet3/examples/TwoJoint/: CMakeLists.txt
bullet3/examples/Vehicles/: Hinge2Vehicle.cpp
bullet3/src/BulletCollision/: CMakeLists.txt
bullet3/src/BulletSoftBody/: btSoftBodyHelpers.cpp
bullet3/test/: CMakeLists.txt
bullet3/test/BulletDynamics/pendulum/: CMakeLists.txt
glad/: CMakeLists.txt
glad/src/: glad.c
glfw/: CMakeLists.txt  README.md
glfw/examples/: CMakeLists.txt  gears.c  particles.c  triangle-opengl.c  windows.c
glfw/src/: CMakeLists.txt  cocoa_window.m  context.c  init.c  input.c  internal.h  monitor.c  null_init.c  null_window.c  osmesa_context.c  platform.c  platform.h  vulkan.c  wgl_context.c  win32_init.c  win32_monitor.c  win32_platform.h  win32_thread.c  win32_window.c  window.c  wl_init.c  wl_window.c  x11_init.c  x11_platform.h  x11_window.c
glfw/tests/: CMakeLists.txt  allocator.c  clipboard.c  cursor.c  empty.c  events.c  gamma.c  inputlag.c  triangle-vulkan.c  window.c
glm/: CMakeLists.txt
glm/glm/: ext.hpp
stb/: CMakeLists.txt  stb_image.h
yaml-cpp/: CMakeLists.txt
(+26 files in other folders)
